Added slf4j-log4j and modified sout to log4j.